{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 40,
  "lineage": "259021ed-c814-4e68-d8a8-7e36610714d0",
  "resources": [
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:loadbalancer/net/assignment-uat/d1b312f6f79b9f35",
            "arn_suffix": "net/assignment-uat/d1b312f6f79b9f35",
            "dns_name": "assignment-uat-d1b312f6f79b9f35.elb.ap-south-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:loadbalancer/net/assignment-uat/d1b312f6f79b9f35",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "assignment-uat",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aee55193dbb60717"
              },
              {
                "subnet_id": "subnet-0e12fd2c45961e705"
              }
            ],
            "subnets": [
              "subnet-0aee55193dbb60717",
              "subnet-0e12fd2c45961e705"
            ],
            "vpc_id": "vpc-0e621e5ccf90a9b3d",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:listener/net/assignment-uat/d1b312f6f79b9f35/3b3ae9fa41b24a10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:targetgroup/assignment-uat/669e906ea9da883a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:listener/net/assignment-uat/d1b312f6f79b9f35/3b3ae9fa41b24a10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:loadbalancer/net/assignment-uat/d1b312f6f79b9f35",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default",
            "module.nlb.aws_lb.main"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:targetgroup/assignment-uat/669e906ea9da883a",
            "arn_suffix": "targetgroup/assignment-uat/669e906ea9da883a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:targetgroup/assignment-uat/669e906ea9da883a",
            "lambda_multi_value_headers_enabled": false,
            "name": "assignment-uat",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:targetgroup/assignment-uat/669e906ea9da883a-20210628053644572300000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:357895776626:targetgroup/assignment-uat/669e906ea9da883a",
            "target_id": "i-0113107eadc274651"
          },
          "dependencies": [
            "module.nlb.aws_lb_target_group.main",
            "module.vpc.aws_instance.web",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:security-group/sg-067650a1a1f0d7ff4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067650a1a1f0d7ff4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210628052003411400000002",
            "name_prefix": "terraform-",
            "owner_id": "357895776626",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "uat",
              "Name": "alb-sg-uat"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "alb-sg-uat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:security-group/sg-00c03aebf488b7900",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c03aebf488b7900",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "49.37.194.37/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210628052000792200000001",
            "name_prefix": "terraform-",
            "owner_id": "357895776626",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgweb"
            },
            "tags_all": {
              "Name": "sgweb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07c4804d8dec84b48",
            "domain": "vpc",
            "id": "eipalloc-0596e6379dd4733d4",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0850fbfedf4eedd0b",
            "private_dns": "ip-10-0-0-227.ap-south-1.compute.internal",
            "private_ip": "10.0.0.227",
            "public_dns": "ec2-3-109-14-27.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.14.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08a68e30af507aefe",
            "domain": "vpc",
            "id": "eipalloc-011ae41f7c5209dc9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0aa59cef2d01e7dbd",
            "private_dns": "ip-10-0-2-160.ap-south-1.compute.internal",
            "private_ip": "10.0.2.160",
            "public_dns": "ec2-3-108-166-100.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.166.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cda377a1b884a1bc",
            "arn": "arn:aws:ec2:ap-south-1:357895776626:instance/i-0113107eadc274651",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0113107eadc274651",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "assignment-web",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-07c4fbe3c02e6a16e",
            "private_dns": "ip-10-0-1-14.ap-south-1.compute.internal",
            "private_ip": "10.0.1.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:357895776626:key/14be58fb-468e-4e9c-b148-30b239471701",
                "throughput": 0,
                "volume_id": "vol-0736f13496b4d6ec9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079a0b9a7b8fd1c2c",
            "tags": {
              "Environment": "uat",
              "Name": "web-server",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "web-server",
              "Project": "assignment"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d1680187837163ec"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:internet-gateway/igw-05eab35c5e61c1fa3",
            "id": "igw-05eab35c5e61c1fa3",
            "owner_id": "357895776626",
            "tags": {
              "Environment": "uat",
              "Name": "gwInternet",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "gwInternet",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0596e6379dd4733d4",
            "connectivity_type": "public",
            "id": "nat-05b1b967771f39cca",
            "network_interface_id": "eni-0850fbfedf4eedd0b",
            "private_ip": "10.0.0.227",
            "public_ip": "3.109.14.27",
            "subnet_id": "subnet-0e12fd2c45961e705",
            "tags": {
              "Environment": "uat",
              "Name": "gwNAT",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "gwNAT",
              "Project": "assignment"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default",
            "module.vpc.aws_eip.nat"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011ae41f7c5209dc9",
            "connectivity_type": "public",
            "id": "nat-0e1fa8efb16457b39",
            "network_interface_id": "eni-0aa59cef2d01e7dbd",
            "private_ip": "10.0.2.160",
            "public_ip": "3.108.166.100",
            "subnet_id": "subnet-0aee55193dbb60717",
            "tags": {
              "Environment": "uat",
              "Name": "gwNAT",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "gwNAT",
              "Project": "assignment"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0461b78abcf7c1e271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05b1b967771f39cca",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0461b78abcf7c1e27",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c059428cfcc64b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e1fa8efb16457b39",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c059428cfcc64b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05eab35c5e61c1fa3",
            "id": "r-rtb-069f9b12a40f26bcc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-069f9b12a40f26bcc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.default",
            "module.vpc.aws_internet_gateway.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:route-table/rtb-0461b78abcf7c1e27",
            "id": "rtb-0461b78abcf7c1e27",
            "owner_id": "357895776626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b1b967771f39cca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "uat",
              "Name": "PrivateRouteTable",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "PrivateRouteTable",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:route-table/rtb-07c059428cfcc64b3",
            "id": "rtb-07c059428cfcc64b3",
            "owner_id": "357895776626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1fa8efb16457b39",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "uat",
              "Name": "PrivateRouteTable",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "PrivateRouteTable",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:route-table/rtb-069f9b12a40f26bcc",
            "id": "rtb-069f9b12a40f26bcc",
            "owner_id": "357895776626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05eab35c5e61c1fa3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "uat",
              "Name": "PublicRouteTable",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "PublicRouteTable",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7f422b51783e020",
            "route_table_id": "rtb-0461b78abcf7c1e27",
            "subnet_id": "subnet-079a0b9a7b8fd1c2c"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.default",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a941e014ce93bd91",
            "route_table_id": "rtb-07c059428cfcc64b3",
            "subnet_id": "subnet-0a93cdd1fe814ed5a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087d094ed9614b408",
            "route_table_id": "rtb-069f9b12a40f26bcc",
            "subnet_id": "subnet-0e12fd2c45961e705"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067599bea749eb4b5",
            "route_table_id": "rtb-069f9b12a40f26bcc",
            "subnet_id": "subnet-0aee55193dbb60717"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:subnet/subnet-079a0b9a7b8fd1c2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-079a0b9a7b8fd1c2c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357895776626",
            "tags": {
              "Environment": "uat",
              "Name": "PrivateSubnet-0",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "PrivateSubnet-0",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:subnet/subnet-0a93cdd1fe814ed5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a93cdd1fe814ed5a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357895776626",
            "tags": {
              "Environment": "uat",
              "Name": "PrivateSubnet-1",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "PrivateSubnet-1",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:subnet/subnet-0e12fd2c45961e705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e12fd2c45961e705",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357895776626",
            "tags": {
              "Environment": "uat",
              "Name": "PublicSubnet-0",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "PublicSubnet-0",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:subnet/subnet-0aee55193dbb60717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0aee55193dbb60717",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357895776626",
            "tags": {
              "Environment": "uat",
              "Name": "PublicSubnet-1",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "PublicSubnet-1",
              "Project": "assignment"
            },
            "vpc_id": "vpc-0e621e5ccf90a9b3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:357895776626:vpc/vpc-0e621e5ccf90a9b3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f659cdfda2356876",
            "default_route_table_id": "rtb-053b410a4211a0df6",
            "default_security_group_id": "sg-0d1680187837163ec",
            "dhcp_options_id": "dopt-21ea484a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e621e5ccf90a9b3d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-053b410a4211a0df6",
            "owner_id": "357895776626",
            "tags": {
              "Environment": "uat",
              "Name": "vpc-uat",
              "Project": "assignment"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "vpc-uat",
              "Project": "assignment"
            }
          }
        }
      ]
    }
  ]
}